# straico-proxy

./: .coderabbit.yaml  AGENTS.md  CURRENT_TOOL_FLOW_ANALYSIS.md  Cargo.toml  MIGRATION_MASTER_PLAN.md  NEW_CHAT_ENDPOINT_ANALYSIS.md  README.md  REUSABLE_TOOL_COMPONENTS.md  ROUTER.md  TOOL_ADAPTATION_STRATEGY.md  TOOL_EMBEDDING_DESIGN.md  main.rs  request.json  response.json
.github/workflows/: release.yml
client/: Cargo.toml
client/examples/: chat_comparison.rs  chat_example.rs
client/src/: chat.rs  client.rs  endpoints.rs  error.rs  lib.rs
client/src/endpoints/: chat.rs  endpoint.rs  error.rs  mod.rs  model_response_example.json  models.rs
client/src/endpoints/chat/: chat_builder.rs  chat_client.rs  chat_request.rs  chat_response.rs  common_types.rs  conversions.rs  endpoint.rs  error.rs  mod.rs  moonshotai_chat_template.txt  openai_common_types.rs  openai_request_types.rs  openai_response_types.rs  qwen_chat_template.txt  request_types.rs  response_types.rs  tests.rs  tool_calling.rs
client/src/endpoints/chat/tool_calling/: conversions.rs  error.rs  formatters.rs  parsers.rs  system_messages.rs  templates.rs  types.rs
client/src/endpoints/chat/tool_calling/templates/: moonshotai_chat_template.txt  qwen_chat_template.txt
client/src/endpoints/completion/: completion_response.rs  mod.rs
client/src/endpoints/models/: endpoint.rs  models_example_response.json  response_types.rs
docs/: ASYNC_PATTERNS.md  CLIENT_GUIDE.md  ERROR_HANDLING.md  PROXY_ARCHITECTURE.md  ROUTER_PATTERN.md  STREAMING.md  TOOL_CALLING.md
proxy/: Cargo.toml  new_chat_endpoint.md
proxy/src/: cli.rs  config.rs  config_manager.rs  content_conversion.rs  content_conversion_extended_tests.rs  content_conversion_tests.rs  debug_middleware.rs  endpoint_selection.rs  error.rs  https_rejector.rs  lib.rs  main.rs  openai_types.rs  provider.rs  providers.rs  request_conversion.rs  response_utils.rs  router.rs  server.rs  streaming.rs  tls_detector.rs  tool_embedding.rs  types.rs
proxy/src/response_utils/: tests.rs
proxy/src/types/: request_types.rs  response_types.rs
proxy/tests/: end_to_end_tests.rs  integration_tests.rs  openai_compatibility_tests.rs  performance_tests.rs  tool_calling_tests.rs
scripts/: run_all_tests.sh  test_chat_endpoint.sh
src/: error.rs  main.rs  server.rs  streaming.rs
straico-client/src/: chat.rs  endpoints.rs
straico-client/src/endpoints/: completion.rs
straico-client/src/endpoints/completion/: completion_request.rs  completion_response.rs
straico-proxy/: Cargo.toml  new_chat_endpoint.md
straico-proxy/src/: error.rs  server.rs  streaming.rs
tasks/: P1-T1-PRESERVE_CURRENT_IMPLEMENTATION.md  P1-T2-CREATE_NEW_CHAT_STRUCTURES.md  P1-T3-IMPLEMENT_CONTENT_FORMAT_CONVERSION.md  P1-T4-ADD_NEW_ENDPOINT_TO_CLIENT.md  P1-T5-UPDATE_PROXY_SERVER.md  P1-T6-ADD_CONFIGURATION_FLAGS.md  P1-T7-TESTING_AND_VALIDATION.md  P2-T1-ANALYZE_CURRENT_TOOL_IMPLEMENTATION.md  P2-T2-DESIGN_TOOL_EMBEDDING_STRATEGY.md  P2-T3-IMPLEMENT_TOOL_DEFINITION_INJECTION.md  P2-T4-ADAPT_TOOL_RESPONSE_PARSING.md  P2-T5-UPDATE_OPENAI_COMPATIBILITY_LAYER.md  P2-T6-TESTING_AND_VALIDATION.md  P3-T1-ANALYZE_CURRENT_STREAMING_IMPLEMENTATION.md  P3-T2-DESIGN_STREAMING_ARCHITECTURE.md  P3-T3-IMPLEMENT_STREAMING_REQUEST_HANDLING.md  P3-T4-ADAPT_STREAMING_RESPONSE_PROCESSING.md  P3-T5-UPDATE_ERROR_HANDLING_AND_FALLBACKS.md  P3-T6-TESTING_AND_VALIDATION.md
tool_calling_examples/: example1_request.json  example1_response.json  example2_request.json  example2_request_with_tool_results.json
