[package]
name = "straico-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
derive = "1.0.0"
flexi_logger = "0.28.0"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
straico-client = { git = "https://github.com/ricardokl/straico-client", package = "straico" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
