[workspace]
members = [
    "proxy",
    "client"
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
thiserror = "2"
flexi_logger = "0.31"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.11"
log = "0.4"
uuid = { version = "1.8", features = ["v4"] }
async-trait = "0.1.77"
http = "1"
