[package]
name = "straico-client"
version = "0.2.0"
edition = "2024"
description = "Rust client for the Straico API"
license = "MIT"

# [lib]
# name = "straico"
# path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls-tls"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
once_cell = "1.21"

