[package]
name = "straico-proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
flexi_logger = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
actix-web = "4.9.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
derive = "1.0.0"
log = { workspace = true }
bytes = "1.6.1"
futures-util = "0.3.31"
straico-client = { path = "../client" }
thiserror = { workspace = true }
anyhow = "1.0.86"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1.15"
either = "1.13.0"
async-trait = "0.1.77"

[dev-dependencies]
straico-proxy = { path = "." }
actix-http = "3"
actix-rt = "2"
http = { workspace = true }
