[package]
name = "straico-proxy"
version = "0.3.3"
edition = "2021"

[dependencies]
flexi_logger = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2.2"
rcgen = "0.13"
clap = { version = "4.5.31", features = ["derive", "env"] }
derive = "1.0.0"
log = { workspace = true }
bytes = "1.6.1"
futures-util = "0.3.31"
straico-client = { path = "../client" }
thiserror = { workspace = true }
anyhow = "1.0.86"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1.15"
either = "1.13.0"
async-trait = { workspace = true }

[dev-dependencies]
straico-proxy = { path = "." }
actix-http = "3"
actix-rt = "2"
http = { workspace = true }
